{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 76,
  "lineage": "b229322b-ee2a-cc50-b7e0-9605a08aa6f4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/natGateways/nat-gateway",
            "idle_timeout_in_minutes": 10,
            "location": "swedencentral",
            "name": "nat-gateway",
            "resource_group_name": "rg-containerapp-keda-service-bus-16",
            "resource_guid": "dda8ae64-8890-4007-879f-9f59363716b2",
            "sku_name": "StandardV2"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nat-gateway",
            "resource_group_name": "rg-containerapp-keda-service-bus-16",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_prefix_association",
      "name": "association_pip_prefix_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/natGateways/nat-gateway|/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/publicIPPrefixes/pip-prefix-nat-gateway",
            "nat_gateway_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/natGateways/nat-gateway",
            "public_ip_prefix_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/publicIPPrefixes/pip-prefix-nat-gateway"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.nat_gateway",
            "azurerm_public_ip_prefix.pip_prefix_nat_gateway",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_aca",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/networkSecurityGroups/nsg-aca",
            "location": "swedencentral",
            "name": "nsg-aca",
            "resource_group_name": "rg-containerapp-keda-service-bus-16",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-all-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "ServiceBus.SwedenCentral",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "allow-outbound-service-bus",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-aca",
            "resource_group_name": "rg-containerapp-keda-service-bus-16",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/networkSecurityGroups/nsg-aca/securityRules/allow-all-inbound",
            "name": "allow-all-inbound",
            "network_security_group_name": "nsg-aca",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "rg-containerapp-keda-service-bus-16",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-all-inbound",
            "network_security_group_name": "nsg-aca",
            "resource_group_name": "rg-containerapp-keda-service-bus-16",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_aca",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_outbound_service_bus",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "ServiceBus.SwedenCentral",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/networkSecurityGroups/nsg-aca/securityRules/allow-outbound-service-bus",
            "name": "allow-outbound-service-bus",
            "network_security_group_name": "nsg-aca",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-containerapp-keda-service-bus-16",
            "source_address_prefix": "10.0.0.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "allow-outbound-service-bus",
            "network_security_group_name": "nsg-aca",
            "resource_group_name": "rg-containerapp-keda-service-bus-16",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_aca",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet_aca",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_aca",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.App/environments"
                  }
                ]
              }
            ],
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/snet-aca",
            "name": "snet-aca",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-containerapp-keda-service-bus-16",
            "virtual_network_name": "vnet-internal"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "snet-aca",
            "resource_group_name": "rg-containerapp-keda-service-bus-16",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a",
            "virtual_network_name": "vnet-internal"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "snet_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/snet-aca",
            "nat_gateway_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/natGateways/nat-gateway",
            "subnet_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/snet-aca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.nat_gateway",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet_aca",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "association_nsg_snet_aca",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/snet-aca",
            "network_security_group_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/networkSecurityGroups/nsg-aca",
            "subnet_id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/snet-aca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_aca",
            "azurerm_resource_group.rg",
            "azurerm_subnet.snet_aca",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b40efa7f-3ab4-436d-a36b-a42055915df6",
            "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/virtualNetworks/vnet-internal",
            "location": "swedencentral",
            "name": "vnet-internal",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-containerapp-keda-service-bus-16",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "delegation",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.App/environments"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/virtualNetworks/vnet-internal/subnets/snet-aca",
                "name": "snet-aca",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/dcef7009-6b94-4382-afdc-17eb160d709a/resourceGroups/rg-containerapp-keda-service-bus-16/providers/Microsoft.Network/networkSecurityGroups/nsg-aca"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-internal",
            "resource_group_name": "rg-containerapp-keda-service-bus-16",
            "subscription_id": "dcef7009-6b94-4382-afdc-17eb160d709a"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}